initial authorization base commit

--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "create-react-app-express",
+  "name": "discord-emoji-manager-client",
   "version": "0.1.0",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
