--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "aws-sdk": "^2.749.0",
     "body-parser": "^1.19.0",
     "celebrate": "^12.2.0",
     "cors": "^2.8.5",
@@ -29,6 +30,7 @@
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-discord": "^0.1.4",
+    "rand-token": "^1.0.1",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
