--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.17.1",
     "http-proxy-middleware": "^1.0.5",
     "mongoose": "^5.10.3",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-discord": "^0.1.4",
