--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "passport": "^0.4.1",
     "passport-discord": "^0.1.4",
     "rand-token": "^1.0.1",
+    "react-images-upload": "^1.2.8",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
