--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "passport-discord": "^0.1.4",
     "rand-token": "^1.0.1",
     "react-images-upload": "^1.2.8",
-    "react-router-dom": "^5.2.0"
+    "react-modal": "^3.11.2",
+    "react-router-dom": "^5.2.0",
+    "react-tabs": "^3.1.1"
   },
   "devDependencies": {
     "concurrently": "^5.1.0"
