--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "express-validator": "^6.6.1",
     "http-proxy-middleware": "^1.0.5",
     "mongoose": "^5.10.3",
     "multer": "^1.4.2",
