--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ coverage
 # production
 build
 
+# docs
+out
+
 # misc
 .DS_Store
 .env
@@ -16,7 +19,9 @@ build
 .env.development.local
 .env.test.local
 .env.production.local
+uploads
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
