--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "aws-sdk": "^2.749.0",
     "body-parser": "^1.19.0",
     "celebrate": "^12.2.0",
+    "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.6.1",
     "http-proxy-middleware": "^1.0.5",
+    "jsdoc": "^3.6.6",
     "mongoose": "^5.10.3",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
