--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "scripts": {
     "client": "cd client && yarn start",
     "server": "nodemon server.js",
+    "test:server": "cd server && mocha ./**/**/*.test.js && cd ..",
+    "test": "yarn test:server",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
     "dev:server": "cd client && yarn build && cd .. && yarn start",
     "start": "cd server && node server.js",
@@ -30,6 +32,7 @@
     "express-validator": "^6.6.1",
     "http-proxy-middleware": "^1.0.5",
     "jsdoc": "^3.6.6",
+    "mocha": "^8.1.3",
     "mongoose": "^5.10.3",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
@@ -39,7 +42,8 @@
     "react-images-upload-demo": "https://github.com/khai93/react-images-upload.git#fix/save-state",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
-    "react-tabs": "^3.1.1"
+    "react-tabs": "^3.1.1",
+    "sinon": "^9.1.0"
   },
   "devDependencies": {
     "concurrently": "^5.1.0"
