--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,15 +6,11 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Variable to Dotenv
-        uses: TickX/var-to-dotenv@v1.1.3
-        with:
-          # Name of key
-          key: Bypass
-          # Value of key
-          value: test
-          envPath: server/.env
       - uses: actions/checkout@v1
+      
+      - name: create env file
+        run: touch ./server/.env
+      
       - uses: actions/setup-node@v1
         with:
           node-version: 12
