--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "celebrate": "^12.2.0",
     "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
+    "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
