--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v1
       
       - name: create env file
-        run: touch ./server/.env
+        run: touch .env
       
       - uses: actions/setup-node@v1
         with:
