--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^3.0.0",
     "express": "^4.17.1",
+    "express-limiter": "^1.6.1",
+    "express-rate-limit": "^5.1.3",
     "express-session": "^1.17.1",
     "express-validator": "^6.6.1",
     "http-proxy-middleware": "^1.0.5",
@@ -42,6 +44,7 @@
     "passport": "^0.4.1",
     "passport-discord": "^0.1.4",
     "rand-token": "^1.0.1",
+    "rate-limit-mongo": "^2.3.0",
     "react-images-upload-demo": "https://github.com/khai93/react-images-upload.git#fix/save-state",
     "react-modal": "^3.11.2",
     "react-progress-button": "^5.1.0",
