--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "celebrate": "^12.2.0",
     "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
+    "custom-env": "^2.0.1",
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^3.0.0",
